Closed Bug 1625299 Opened 4 years ago Closed 4 years ago

Reinstate print-progress dialog (can't print with print progress dialog)

Categories

(MailNews Core :: Printing, defect, P1)

Unspecified
All

Tracking

(thunderbird75 wontfix, thunderbird76 wontfix, thunderbird77 affected, thunderbird78+ fixed)

RESOLVED FIXED
Thunderbird 79.0
Tracking Status
thunderbird75 --- wontfix
thunderbird76 --- wontfix
thunderbird77 --- affected
thunderbird78 + fixed

People

(Reporter: benc, Assigned: mkmelin)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

I disabled the print-progress dialog in Bug 1620314 as it was preventing the printing from working.
It'd be nice to fix it.
There's a bit of analysis in Bug 1620314.

Keywords: regression
OS: Unspecified → All
Regressed by: 1620314
Version: unspecified → 75

Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is -- (Backlog,) indicating it has has not been previously triaged, the bug's Severity is being updated to -- (default, untriaged.)

Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is -- (Backlog,) indicating it has has not been previously triaged, the bug's Severity is being updated to -- (default, untriaged.)

Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is -- (Backlog,) indicating it has has not been previously triaged, the bug's Severity is being updated to -- (default, untriaged.)

Severity: normal → S3

The severity of these bugs was changed, mistakenly, from normal to S3.

Because these bugs have a priority of --, indicating that they have not been previously triaged, these bugs should be changed to Severity of --.

Severity: S3 → --
Priority: -- → P1
Summary: Reinstate print-progress dialog → Reinstate print-progress dialog (can't print with print progress dialog)

The cause is bug 1630095.

Depends on: 1630095

I'm concerned about bug 1630095 impact on our ability to get a fully representative cross section of testers for version 78.

Is disabling the print progress really a solid workaround? For testing publicity we'll need to post something in release / testing notes of users should expect.

Print progress dialog is reinstated in 77.0b2 and 77.0b3. This is my default setting "print.show_print_progress;true"

Prevents printing emails from 'Print Preview", using just "Print" works. Calendar printing works from its "Print Preview".

Printing emails from "Print Preview" works with the pref set to "false".

Severity: -- → S2

It's working again.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #9155626 - Flags: review?(benc)
Comment on attachment 9155626 [details] [diff] [review]
bug1625299_reinstate_print.patch

Review of attachment 9155626 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good (And seeing bug 1639816 is quite the relief!).
Attachment #9155626 - Flags: review?(benc) → review+

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/6ce278c40c58
Reinstate print-progress dialog (can't print with print progress dialog). r=benc

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 79.0
Comment on attachment 9155626 [details] [diff] [review]
bug1625299_reinstate_print.patch

Want the print progress dialog back. Bug 1639816 is on m-c beta so we can just uplift this too.
Attachment #9155626 - Flags: approval-comm-beta?
Comment on attachment 9155626 [details] [diff] [review]
bug1625299_reinstate_print.patch

Approved for beta
Attachment #9155626 - Flags: approval-comm-beta? → approval-comm-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: