Bug 1625299 - Reinstate print-progress dialog (can't print with print progress dialog). r=benc

Was disabled in bug 1620314, but can be re-enabled now since bug 1639816 fixed it for non-e10s.